ont-api: 4.0.0-SNAPSHOT -- java-17 + jena-ontapi-5.1.0, related fixing and refactoring