@@ -22,9 +22,9 @@ import com.github.owlcs.ontapi.Ontology;
 import com.github.owlcs.ontapi.OntologyManager;
 import com.github.owlcs.ontapi.testutils.FileMap;
 import com.github.owlcs.ontapi.testutils.OWLIOUtils;
-import com.github.sszuev.jena.ontapi.UnionGraph;
-import com.github.sszuev.jena.ontapi.model.OntModel;
-import com.github.sszuev.jena.ontapi.utils.Graphs;
+import org.apache.jena.ontapi.UnionGraph;
+import org.apache.jena.ontapi.model.OntModel;
+import org.apache.jena.ontapi.utils.Graphs;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.semanticweb.owlapi.model.AddImport;
@@ -105,10 +105,10 @@ public class CopyManagerTest {
                     Assertions.assertNotNull(dst, "Can't find ontology " + id);
                     List<OWLAxiom> expectedAxioms = src.axioms(Imports.EXCLUDED)
                             .filter(t -> !t.getAxiomType().equals(AxiomType.DECLARATION))
-                            .collect(Collectors.toList());
+                            .toList();
                     List<OWLAxiom> actualAxioms = dst.axioms(Imports.EXCLUDED)
                             .filter(t -> !t.getAxiomType().equals(AxiomType.DECLARATION))
-                            .collect(Collectors.toList());
+                            .toList();
                     Assertions.assertEquals(expectedAxioms.size(), actualAxioms.size(), "Axioms list differ for " + id);
                 });
     }
@@ -450,11 +450,11 @@ public class CopyManagerTest {
     }
 
     private void testManagerWithCyclicImports(OntologyManager m) {
-        Assertions.assertEquals(2, m.ontologies().peek(x -> {
-            LOGGER.debug("TEST: {}", x);
+        m.ontologies().forEach(x -> {
             UnionGraph g = (UnionGraph) ((Ontology) x).asGraphModel().getGraph();
             Assertions.assertEquals(2, Graphs.dataGraphs(g).count());
-        }).count());
+        });
+        Assertions.assertEquals(2, m.ontologies().count());
     }
 
     @Test
